--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/src/src/node_modules
 /.pnp
 .pnp.js
 
